@@ -1,5 +1,7 @@
 2015-11-09  Carl Hetherington  <cth@carlh.net>
 
+	* Correct a number of float/double mismatches; should fix #742.
+
 	* Desensitise trim-playhead buttons as appropriate (#737).
 
 	* Keep same frame visible after trimming content start (#737).
